[tool.poetry]
name = "gameview-music-data"
version = "0.1.0"
description = "List of music for games"
authors = ["lcd1232 <8745863+lcd1232@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "gameview_music_data"}]

[tool.poetry.dependencies]
python = "^3.11"
PyYAML = "~6"
requests = "~2"
requests-ratelimiter = "~0"


[tool.poetry.group.dev.dependencies]
pre-commit = "~3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
